# roboracing-rigatoniv-base

./: README.md
comms/: CMakeLists.txt
comms/launch/: comms_launch.py
comms/src/: ackermann_send.cpp  udp_client.cpp
install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
install/comms/lib/comms/: ackermann_send  udp
install/comms/share/comms/: local_setup.dsv  local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/comms/share/comms/cmake/: commsConfig.cmake
install/comms/share/comms/environment/: ament_prefix_path.sh  path.sh
install/launch_robot/share/launch_robot/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/launch_robot/share/launch_robot/launch/: test.launch.py
install/vision/lib/vision/: cone  line  video
install/vision/share/ament_index/resource_index/package_run_dependencies/: vision
install/vision/share/ament_index/resource_index/parent_prefix_path/: vision
install/vision/share/vision/: package.sh  package.xml
launch_robot/: setup.cfg  setup.py
launch_robot/launch/: test.launch.py
log/: latest_build
python_rosbag_readers/: output.yaml  reader.py
vision/: CMakeLists.txt
vision/launch/: vision_launch.py
vision/python/: lane_detection.py
vision/src/: cone_detection.cpp  line_detection.cpp  spline_function.cpp  video.cpp
